fix(material/form-field): missing focus indicator for outline appearance in high-contrast
In high-contast mode, form fields in outline appearance do not have
any focus indication. This commit adds a focus indicator in
high-contrast mode. Additionally, the focus indication for filled
form fields has been improved. Instead of relying on the underline
ripple that overlaps with the outline, we thicken the outline border
on focus (similar as with the outline appearance).

Fixes #22989.

--- a/src/material-experimental/mdc-form-field/_form-field-high-contrast.scss
+++ b/src/material-experimental/mdc-form-field/_form-field-high-contrast.scss
@@ -20,16 +20,10 @@
     }
   }
 
-  // For form fields with outline appearance, we unset the outline solid borders
-  // and show a dashed thick border to indicate focus.
+  // For form fields with outline appearance, we show a dashed thick border on top
+  // of the solid notched-outline border to indicate focus.
   .mat-mdc-form-field.mat-focused .mdc-notched-outline {
     @include a11y.high-contrast(active, off) {
-      .mdc-notched-outline__leading,
-      .mdc-notched-outline__trailing,
-      .mdc-notched-outline__notch, {
-        border: none;
-      }
-
       border: $focus-indicator-style $focus-indicator-width;
     }
   }
